test: more working `bun` tests

--- a/apps/admin/backend/package.json
+++ b/apps/admin/backend/package.json
@@ -16,12 +16,12 @@
     "lint:fix": "pnpm type-check && eslint . --fix",
     "pre-commit": "lint-staged",
     "start": "node ./build/index.js",
-    "test": "is-ci test:ci test:watch",
-    "test:ci": "TZ=America/Anchorage jest --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:coverage": "TZ=America/Anchorage jest --coverage",
+    "test": "TZ=America/Anchorage bun test",
+    "test:ci": "TZ=America/Anchorage bun test --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
+    "test:coverage": "TZ=America/Anchorage bun test --coverage",
     "test:debug": "TZ=America/Anchorage node --inspect-brk $(which jest) --runInBand --no-cache",
-    "test:perf": "jest --coverage=false --roots '<rootDir>/perf' --testMatch '<rootDir>/perf/**/*.test.ts'",
-    "test:watch": "TZ=America/Anchorage jest --watch",
+    "test:perf": "bun test --coverage=false --roots '<rootDir>/perf' --testMatch '<rootDir>/perf/**/*.test.ts'",
+    "test:watch": "TZ=America/Anchorage bun test --watch",
     "type-check": "tsc --build"
   },
   "lint-staged": {
@@ -81,7 +81,6 @@
     "@types/luxon": "^3.0.0",
     "@types/micromatch": "^4.0.2",
     "@types/multer": "^1.4.7",
-    "@types/node": "16.18.23",
     "@types/object-hash": "^3.0.6",
     "@types/react": "18.2.18",
     "@types/react-dom": "^18.2.7",
