--- a/libs/backend/package.json
+++ b/libs/backend/package.json
@@ -18,8 +18,8 @@
     "pre-commit": "lint-staged",
     "test": "is-ci test:ci test:watch",
     "test:ci": "TZ=America/Anchorage pnpm build && pnpm test:coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:coverage": "TZ=America/Anchorage jest --coverage",
-    "test:watch": "TZ=America/Anchorage jest --watch",
+    "test:coverage": "TZ=America/Anchorage bun test --coverage",
+    "test:watch": "TZ=America/Anchorage bun test --watch",
     "type-check": "tsc --build"
   },
   "lint-staged": {
