--- a/libs/ballot-encoder/package.json
+++ b/libs/ballot-encoder/package.json
@@ -14,9 +14,9 @@
     "lint:fix": "pnpm type-check && eslint . --fix",
     "test": "is-ci test:ci test:watch",
     "test:ci": "jest --ci --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:coverage": "jest --coverage",
+    "test:coverage": "bun test --coverage",
     "test:debug": "node --inspect-brk $(which jest) --runInBand --no-cache",
-    "test:watch": "jest --watch",
+    "test:watch": "bun test --watch",
     "pre-commit": "lint-staged"
   },
   "lint-staged": {
