--- a/libs/hmpb/render-backend/package.json
+++ b/libs/hmpb/render-backend/package.json
@@ -18,10 +18,10 @@
     "pre-commit": "lint-staged",
     "start": "node ./build/index.js",
     "test": "is-ci test:ci test:watch",
-    "test:ci": "jest --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:coverage": "jest --coverage",
+    "test:ci": "bun test --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
+    "test:coverage": "bun test --coverage",
     "test:debug": "node --inspect-brk $(which jest) --runInBand --no-cache",
-    "test:watch": "jest --watch",
+    "test:watch": "bun test --watch",
     "type-check": "tsc --build"
   },
   "lint-staged": {
