--- a/apps/admin/backend/tsconfig.json
+++ b/apps/admin/backend/tsconfig.json
@@ -7,7 +7,7 @@
     "allowSyntheticDefaultImports": true,
     "composite": true,
     "esModuleInterop": true,
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": ["esnext"],
     "module": "node16",
     "moduleResolution": "node16",
     "noEmit": true,
