--- a/libs/basics/package.json
+++ b/libs/basics/package.json
@@ -15,8 +15,8 @@
     "pre-commit": "lint-staged",
     "test": "is-ci test:ci test:watch",
     "test:ci": "pnpm build && pnpm test:coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:coverage": "jest --coverage",
-    "test:watch": "jest --watch",
+    "test:coverage": "bun test --coverage",
+    "test:watch": "bun test --watch",
     "type-check": "tsc --build"
   },
   "lint-staged": {
