--- a/libs/converter-nh-accuvote/package.json
+++ b/libs/converter-nh-accuvote/package.json
@@ -14,9 +14,9 @@
     "lint": "pnpm type-check && eslint .",
     "lint:fix": "pnpm type-check && eslint . --fix",
     "test": "is-ci test:ci test:watch",
-    "test:ci": "jest --coverage --ci --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:coverage": "jest --coverage",
-    "test:watch": "jest --watch"
+    "test:ci": "bun test --coverage --ci --reporters=default --reporters=jest-junit --maxWorkers=6",
+    "test:coverage": "bun test --coverage",
+    "test:watch": "bun test --watch"
   },
   "packageManager": "pnpm@8.1.0",
   "dependencies": {
