--- a/libs/message-coder/package.json
+++ b/libs/message-coder/package.json
@@ -14,8 +14,8 @@
     "pre-commit": "lint-staged",
     "test": "is-ci test:ci test:watch",
     "test:ci": "jest --ci --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:coverage": "jest --coverage",
-    "test:watch": "jest --watch",
+    "test:coverage": "bun test --coverage",
+    "test:watch": "bun test --watch",
     "type-check": "tsc --build"
   },
   "dependencies": {
