--- a/libs/monorepo-utils/package.json
+++ b/libs/monorepo-utils/package.json
@@ -15,9 +15,9 @@
     "lint": "pnpm type-check && eslint .",
     "lint:fix": "pnpm type-check && eslint . --fix",
     "test": "is-ci test:ci test:watch",
-    "test:coverage": "jest --coverage",
-    "test:watch": "jest --watch",
-    "test:ci": "jest --coverage --ci --reporters=default --reporters=jest-junit --maxWorkers=7",
+    "test:coverage": "bun test --coverage",
+    "test:watch": "bun test --watch",
+    "test:ci": "bun test --coverage --ci --reporters=default --reporters=jest-junit --maxWorkers=7",
     "pre-commit": "lint-staged"
   },
   "lint-staged": {
