--- a/libs/printing/package.json
+++ b/libs/printing/package.json
@@ -16,8 +16,8 @@
     "pre-commit": "lint-staged",
     "test": "is-ci test:ci test:watch",
     "test:ci": "pnpm build && TZ=America/Anchorage pnpm test:coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:coverage": "TZ=America/Anchorage jest --coverage",
-    "test:watch": "TZ=America/Anchorage jest --watch",
+    "test:coverage": "TZ=America/Anchorage bun test --coverage",
+    "test:watch": "TZ=America/Anchorage bun test --watch",
     "type-check": "tsc --build"
   },
   "lint-staged": {
