--- a/libs/types/package.json
+++ b/libs/types/package.json
@@ -17,9 +17,9 @@
     "lint": "pnpm type-check && eslint .",
     "lint:fix": "pnpm type-check && eslint . --fix",
     "test": "is-ci test:ci test:watch",
-    "test:coverage": "jest --coverage",
-    "test:ci": "jest --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:watch": "jest --watch",
+    "test:coverage": "bun test --coverage",
+    "test:ci": "bun test --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
+    "test:watch": "bun test --watch",
     "pre-commit": "lint-staged",
     "cdf:ballot-definition:build-schema": "cdf-schema-builder data/cdf/ballot-definition/nist-schema.xsd src/cdf/ballot-definition/vx-schema.json > src/cdf/ballot-definition/index.ts",
     "cdf:cvr:build-schema": "cdf-schema-builder data/cdf/cast-vote-records/nist-schema.xsd src/cdf/cast-vote-records/vx-schema.json > src/cdf/cast-vote-records/index.ts",
