--- a/libs/utils/package.json
+++ b/libs/utils/package.json
@@ -14,12 +14,12 @@
     "type-check": "tsc --build",
     "build": "tsc --build tsconfig.build.json",
     "clean": "rm -rf build tsconfig.tsbuildinfo tsconfig.build.tsbuildinfo",
-    "lint": "pnpm type-check && eslint .",
-    "lint:fix": "pnpm type-check && eslint . --fix",
-    "test": "is-ci test:ci test:watch",
-    "test:watch": "TZ=America/Anchorage jest --watch",
-    "test:coverage": "TZ=America/Anchorage jest --coverage",
-    "test:ci": "TZ=America/Anchorage pnpm build && pnpm test:coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
+    "lint": "bun run type-check && eslint .",
+    "lint:fix": "bun run type-check && eslint . --fix",
+    "test": "TZ=America/Anchorage bun test",
+    "test:watch": "TZ=America/Anchorage bun test --watch",
+    "test:coverage": "TZ=America/Anchorage bun test --coverage",
+    "test:ci": "TZ=America/Anchorage bun run build && bun run test:coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
     "pre-commit": "lint-staged"
   },
   "lint-staged": {
@@ -50,6 +50,7 @@
     "zod": "3.14.4"
   },
   "devDependencies": {
+    "@happy-dom/global-registrator": "^13.8.6",
     "@types/debug": "4.1.8",
     "@types/fast-text-encoding": "^1.0.1",
     "@types/kiosk-browser": "workspace:*",
@@ -64,12 +65,12 @@
     "eslint-plugin-vx": "workspace:*",
     "fast-check": "2.23.2",
     "fetch-mock": "9.11.0",
+    "happy-dom": "^13.8.6",
     "is-ci-cli": "2.2.0",
     "jest-environment-jsdom": "^29.6.2",
     "jest-fetch-mock": "^3.0.3",
     "lint-staged": "11.0.0",
     "node-fetch": "^2.6.0",
     "sort-package-json": "^1.50.0"
-  },
-  "packageManager": "pnpm@8.1.0"
+  }
 }
