--- a/libs/grout/package.json
+++ b/libs/grout/package.json
@@ -13,7 +13,7 @@
     "lint": "pnpm type-check && eslint .",
     "lint:fix": "pnpm type-check && eslint . --fix",
     "pre-commit": "lint-staged",
-    "test": "is-ci test:ci test:watch",
+    "test": "bun test",
     "test:ci": "bun test --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
     "test:coverage": "bun test --coverage",
     "test:watch": "bun test --watch",
@@ -31,6 +31,7 @@
     ]
   },
   "dependencies": {
+    "@types/bun": "^1.0.8",
     "@votingworks/basics": "workspace:*",
     "cross-fetch": "^3.1.5",
     "debug": "4.3.4",
@@ -38,12 +39,10 @@
   },
   "devDependencies": {
     "@types/debug": "4.1.8",
-    "@types/express": "4.17.14",
     "@types/luxon": "^3.0.0",
     "@types/node-fetch": "^2.6.0",
     "eslint-plugin-vx": "workspace:*",
     "expect-type": "^0.15.0",
-    "express": "4.18.2",
     "is-ci-cli": "2.2.0",
     "lint-staged": "11.0.0",
     "sort-package-json": "^1.50.0"
