WIP update fixtures and mark ballots

--- a/libs/hmpb/render-backend/package.json
+++ b/libs/hmpb/render-backend/package.json
@@ -12,7 +12,7 @@
     "build": "tsc --build tsconfig.build.json",
     "clean": "rm -rf build tsconfig.tsbuildinfo tsconfig.build.tsbuildinfo",
     "format": "prettier '**/*.+(css|graphql|json|less|md|mdx|sass|scss|yaml|yml)' --write",
-    "generate-fixtures": "./bin/generate-fixtures",
+    "generate-fixtures": "DEBUG=hmpb:ballot_fixtures ./bin/generate-fixtures",
     "lint": "pnpm type-check && eslint .",
     "lint:fix": "pnpm type-check && eslint . --fix",
     "pre-commit": "lint-staged",
@@ -44,8 +44,10 @@
     "@votingworks/ui": "workspace:*",
     "@xmldom/xmldom": "^0.8.1",
     "buffer": "^6.0.3",
+    "debug": "4.3.4",
     "js-sha256": "^0.9.0",
     "path": "^0.12.7",
+    "pdf-lib": "^1.17.1",
     "pdfkit": "^0.13.0",
     "playwright": "^1.40.1",
     "react": "18.2.0",
@@ -55,6 +57,7 @@
   },
   "devDependencies": {
     "@jest/types": "^29.6.1",
+    "@types/debug": "4.1.8",
     "@types/jest": "^29.5.3",
     "@types/node": "16.18.23",
     "@types/pdfkit": "^0.12.9",
