allow daemons to run with no hardware

--- a/apps/mark-scan/pat-device-input/Cargo.toml
+++ b/apps/mark-scan/pat-device-input/Cargo.toml
@@ -11,5 +11,7 @@ path = "src/patinputd.rs"
 
 [dependencies]
 ctrlc = { workspace = true }
-vx-logging = { workspace = true }
+daemon-utils = { workspace = true }
+clap = { workspace = true, features = ["derive"] }
 uinput = { workspace = true }
+vx-logging = { workspace = true }
