--- a/apps/mark-scan/accessible-controller/Cargo.toml
+++ b/apps/mark-scan/accessible-controller/Cargo.toml
@@ -8,9 +8,11 @@ name = "controllerd"
 path = "src/controllerd.rs"
 
 [dependencies]
+clap = { workspace = true, features = ["derive"] }
 color-eyre = { workspace = true }
 crc16 = { workspace = true }
 ctrlc = { workspace = true }
+daemon-utils = { workspace = true }
 num_enum = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
