--- a/libs/hmpb/render-backend/package.json
+++ b/libs/hmpb/render-backend/package.json
@@ -66,12 +66,14 @@
     "@types/styled-components": "^5.1.26",
     "@types/svg-to-pdfkit": "^0.1.0",
     "@types/tmp": "0.2.4",
-    "@votingworks/monorepo-utils": "workspace:^",
+    "@votingworks/image-utils": "workspace:*",
+    "@votingworks/monorepo-utils": "workspace:*",
     "esbuild": "0.17.11",
     "esbuild-runner": "2.2.2",
     "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
     "jest": "^29.6.2",
+    "jest-image-matcher": "^3.0.1",
     "jest-junit": "^16.0.0",
     "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
