--- a/libs/hmpb/render-backend/tsconfig.json
+++ b/libs/hmpb/render-backend/tsconfig.json
@@ -23,6 +23,7 @@
     { "path": "../../../libs/ballot-encoder/tsconfig.build.json" },
     { "path": "../../../libs/eslint-plugin-vx/tsconfig.build.json" },
     { "path": "../../../libs/fixtures/tsconfig.build.json" },
+    { "path": "../../../libs/image-utils/tsconfig.build.json" },
     { "path": "../../../libs/types/tsconfig.build.json" },
     { "path": "../../../libs/ui/tsconfig.build.json" }
   ]
