--- a/apps/scan/backend/package.json
+++ b/apps/scan/backend/package.json
@@ -47,6 +47,7 @@
     "@votingworks/db": "workspace:*",
     "@votingworks/dev-dock-backend": "workspace:*",
     "@votingworks/fixtures": "workspace:*",
+    "@votingworks/fujitsu-thermal-printer": "workspace:*",
     "@votingworks/grout": "workspace:*",
     "@votingworks/image-utils": "workspace:*",
     "@votingworks/logging": "workspace:*",
@@ -64,6 +65,7 @@
     "got": "^11.8.2",
     "js-sha256": "^0.9.0",
     "luxon": "^3.0.0",
+    "memoize-one": "^6.0.0",
     "pdfjs-dist": "2.3.200",
     "rxjs": "7.8.1",
     "tmp": "^0.2.1",
