Clean up pdi-rs and add README

--- a/libs/pdi-rs/package.json
+++ b/libs/pdi-rs/package.json
@@ -2,7 +2,7 @@
   "name": "@votingworks/pdi-rs",
   "version": "1.0.0",
   "private": true,
-  "description": "Scanner interface for the PDI PageScan 5",
+  "description": "Scanner interface for the PDI PageScan 6",
   "license": "AGPL-3.0",
   "author": "VotingWorks Eng <eng@voting.works>",
   "main": "build/index.js",
@@ -11,9 +11,9 @@
     "build"
   ],
   "scripts": {
-    "benchmark": "jest --runInBand --projects benchmarks",
-    "build": "pnpm install:rust-addon && pnpm build:ts",
+    "build": "pnpm install:rust-addon && pnpm build:rust-addon && pnpm build:ts",
     "build:ts": "tsc --build tsconfig.build.json",
+    "build:rust-addon": "cargo build --release",
     "clean": "cargo clean && rm -rf build tsconfig.tsbuildinfo tsconfig.build.tsbuildinfo",
     "install:rust-addon": "cargo fetch",
     "lint": "pnpm type-check && eslint .",
@@ -45,7 +45,6 @@
   },
   "devDependencies": {
     "@types/node": "16.18.23",
-    "cargo-cp-artifact": "^0.1",
     "esbuild-runner": "2.2.2"
   },
   "packageManager": "pnpm@8.1.0"
