--- a/libs/pdi-rs/tsconfig.json
+++ b/libs/pdi-rs/tsconfig.json
@@ -15,14 +15,9 @@
     "resolveJsonModule": true
   },
   "references": [
-    { "path": "../../libs/ballot-encoder/tsconfig.build.json" },
-    { "path": "../../libs/basics/tsconfig.build.json" },
-    { "path": "../../libs/eslint-plugin-vx/tsconfig.build.json" },
-    { "path": "../../libs/fixtures/tsconfig.build.json" },
-    { "path": "../../libs/hmpb/layout/tsconfig.build.json" },
-    { "path": "../../libs/hmpb/render-backend/tsconfig.build.json" },
-    { "path": "../../libs/image-utils/tsconfig.build.json" },
-    { "path": "../../libs/types/tsconfig.build.json" },
-    { "path": "../../libs/utils/tsconfig.build.json" }
+    { "path": "../basics/tsconfig.build.json" },
+    { "path": "../eslint-plugin-vx/tsconfig.build.json" },
+    { "path": "../image-utils/tsconfig.build.json" },
+    { "path": "../types/tsconfig.build.json" }
   ]
 }
