--- a/libs/pdi-scanner/package.json
+++ b/libs/pdi-scanner/package.json
@@ -20,7 +20,7 @@
     "lint:fix": "pnpm type-check && eslint . --fix",
     "pre-commit": "lint-staged",
     "test": "pnpm test:rust-addon && pnpm test:ts",
-    "test:ci": "pnpm build && pnpm test:ts:coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
+    "test:ci": "pnpm build && pnpm test:ts:coverage --reporters=default --reporters=jest-junit --maxWorkers=6 --passWithNoTests",
     "test:rust-addon": "cargo test",
     "test:ts": "is-ci test:ci test:ts:watch",
     "test:ts:coverage": "jest --coverage",
@@ -47,7 +47,10 @@
   "devDependencies": {
     "@types/node": "16.18.23",
     "esbuild-runner": "2.2.2",
-    "eslint-plugin-vx": "workspace:*"
+    "eslint-plugin-vx": "workspace:*",
+    "is-ci": "^3.0.1",
+    "jest": "^29.6.2",
+    "jest-junit": "^16.0.0"
   },
   "packageManager": "pnpm@8.1.0"
 }
