--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
 ]
 
 [workspace.dependencies]
+ab_glyph = "0.2.23"
 base64 = "0.22.0"
 bitter = "0.6.1"
 clap = { version = "4.0.29", features = ["cargo"] }
@@ -28,7 +29,6 @@ pretty_env_logger = "0.5.0"
 proptest = "1.0.0"
 rayon = "1.5.3"
 rqrr = "0.7.1"
-rusttype = "0.9.3"
 serde = { version = "1.0.150", features = ["derive"] }
 serde_json = "1.0.89"
 serialport = "4.2.2"
