--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,26 +9,26 @@ members = [
 ]
 
 [workspace.dependencies]
-base64 = "0.21.4"
+ab_glyph = "0.2.23"
+base64 = "0.22.0"
 bitter = "0.6.1"
 clap = { version = "4.0.29", features = ["cargo"] }
 color-eyre = "0.6.2"
 crc16 = "0.4.0"
 ctrlc = "3.4.2"
 hex = "0.4.3"
-image = "0.24.5"
-imageproc = "0.23.0"
-itertools = "0.10.5"
+image = "0.25.0"
+imageproc = "0.24.0"
+itertools = "0.12.1"
 log = "0.4.17"
 vx-logging = { path = "libs/logging" }
 logging_timer = "1.1.0"
-neon = { version = "0.10", default-features = false, features = ["napi-6"] }
+neon = { version = "1.0.0", default-features = false, features = ["napi-6"] }
 num_enum = "0.7.1"
-pretty_env_logger = "0.4.0"
+pretty_env_logger = "0.5.0"
 proptest = "1.0.0"
 rayon = "1.5.3"
-rqrr = "0.6.0"
-rusttype = "0.9.3"
+rqrr = "0.7.1"
 serde = { version = "1.0.150", features = ["derive"] }
 serde_json = "1.0.89"
 serialport = "4.2.2"
@@ -36,7 +36,7 @@ tempfile = "3.3.0"
 thiserror = "1.0.50"
 types-rs = { path = "libs/types-rs" }
 uinput = "0.1.3"
-zbar-rust = "0.0.21"
+zbar-rust = "0.0.23"
 
 [workspace.lints.rust]
 dead_code = "deny"
