Allow daemons to run without hardware; make more robust for different device configs (#4695)
* allow daemons to run with no hardware

* list ports instead of hardcoding

* fix(mark-scan): `clap` usage fixes (#4738)

* Apply suggestions from code review

Co-authored-by: Brian Donovan <1938+eventualbuddha@users.noreply.github.com>

* PR feedback

---------

Co-authored-by: Brian Donovan <1938+eventualbuddha@users.noreply.github.com>

--- a/apps/mark-scan/pat-device-input/Cargo.toml
+++ b/apps/mark-scan/pat-device-input/Cargo.toml
@@ -10,6 +10,8 @@ path = "src/patinputd.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { workspace = true, features = ["derive"] }
 ctrlc = { workspace = true }
-vx-logging = { workspace = true }
+daemon-utils = { workspace = true }
 uinput = { workspace = true }
+vx-logging = { workspace = true }
