--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1299,6 +1299,24 @@ jobs:
           command: |
             cargo test -p daemon-utils
 
+  test-crate-patinputd:
+    executor: 'nodejs'
+    resource_class: xlarge
+    steps:
+      - checkout-and-install
+      - run:
+          name: Build
+          command: |
+            cargo build -p patinputd
+      - run:
+          name: Lint
+          command: |
+            cargo clippy -p patinputd
+      - run:
+          name: Test
+          command: |
+            cargo test -p patinputd
+
   test-crate-types-rs:
     executor: 'nodejs'
     resource_class: xlarge
@@ -1407,6 +1425,7 @@ workflows:
       - test-crate-ballot-interpreter
       - test-crate-controllerd
       - test-crate-daemon-utils
+      - test-crate-patinputd
       - test-crate-types-rs
       - test-crate-vx-logging
       - validate-monorepo
