--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,14 @@ members = [
 
 [workspace.dependencies]
 ab_glyph = "0.2.23"
+anyhow = "1.0.75"
 base64 = "0.22.0"
 bitter = "0.6.1"
+chrono = "0.4.31"
 clap = { version = "4.0.29", features = ["cargo", "derive", "env"] }
 color-eyre = "0.6.2"
 crc16 = "0.4.0"
+crossterm = "0.27.0"
 csv = "1.3.0"
 ctrlc = "3.4.2"
 hex = "0.4.3"
@@ -30,11 +33,16 @@ daemon-utils = { path = "apps/mark-scan/daemon-utils" }
 logging_timer = "1.1.0"
 neon = { version = "1.0.0", default-features = false, features = ["napi-6"] }
 neon-serde3 = "0.10.0"
+nom = "7.1.3"
 num_enum = "0.7.1"
 pretty_env_logger = "0.5.0"
 proptest = "1.0.0"
+psutil = "3.3.0"
+rand = "0.8.5"
+ratatui = "0.26.2"
 rayon = "1.5.3"
 rqrr = "0.7.1"
+rusb = "0.9.3"
 serde = { version = "1.0.150", features = ["derive"] }
 serde_json = "1.0.89"
 serialport = "4.2.2"
@@ -44,6 +52,7 @@ tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 types-rs = { path = "libs/types-rs" }
 uinput = "0.1.3"
+users = "0.11.0"
 zbar-rust = "0.0.23"
 
 [workspace.lints.rust]
