--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1268,7 +1268,131 @@ jobs:
       - store_test_results:
           path: libs/utils/reports/
 
+  test-crate-ballot-interpreter:
+    executor: 'nodejs'
+    resource_class: xlarge
+    steps:
+      - checkout-and-install
+      - run:
+          name: Build
+          command: |
+            cargo build -p ballot-interpreter
+      - run:
+          name: Lint
+          command: |
+            cargo clippy -p ballot-interpreter
+      - run:
+          name: Test
+          command: |
+            cargo test -p ballot-interpreter
 
+  test-crate-controllerd:
+    executor: 'nodejs'
+    resource_class: xlarge
+    steps:
+      - checkout-and-install
+      - run:
+          name: Build
+          command: |
+            cargo build -p controllerd
+      - run:
+          name: Lint
+          command: |
+            cargo clippy -p controllerd
+      - run:
+          name: Test
+          command: |
+            cargo test -p controllerd
+
+  test-crate-daemon-utils:
+    executor: 'nodejs'
+    resource_class: xlarge
+    steps:
+      - checkout-and-install
+      - run:
+          name: Build
+          command: |
+            cargo build -p daemon-utils
+      - run:
+          name: Lint
+          command: |
+            cargo clippy -p daemon-utils
+      - run:
+          name: Test
+          command: |
+            cargo test -p daemon-utils
+
+  test-crate-patinputd:
+    executor: 'nodejs'
+    resource_class: xlarge
+    steps:
+      - checkout-and-install
+      - run:
+          name: Build
+          command: |
+            cargo build -p patinputd
+      - run:
+          name: Lint
+          command: |
+            cargo clippy -p patinputd
+      - run:
+          name: Test
+          command: |
+            cargo test -p patinputd
+
+  test-crate-pdi-scanner:
+    executor: 'nodejs'
+    resource_class: xlarge
+    steps:
+      - checkout-and-install
+      - run:
+          name: Build
+          command: |
+            cargo build -p pdi-scanner
+      - run:
+          name: Lint
+          command: |
+            cargo clippy -p pdi-scanner
+      - run:
+          name: Test
+          command: |
+            cargo test -p pdi-scanner
+
+  test-crate-types-rs:
+    executor: 'nodejs'
+    resource_class: xlarge
+    steps:
+      - checkout-and-install
+      - run:
+          name: Build
+          command: |
+            cargo build -p types-rs
+      - run:
+          name: Lint
+          command: |
+            cargo clippy -p types-rs
+      - run:
+          name: Test
+          command: |
+            cargo test -p types-rs
+
+  test-crate-vx-logging:
+    executor: 'nodejs'
+    resource_class: xlarge
+    steps:
+      - checkout-and-install
+      - run:
+          name: Build
+          command: |
+            cargo build -p vx-logging
+      - run:
+          name: Lint
+          command: |
+            cargo clippy -p vx-logging
+      - run:
+          name: Test
+          command: |
+            cargo test -p vx-logging
 
   validate-monorepo:
     executor: nodejs
@@ -1340,6 +1464,13 @@ workflows:
       - test-libs-ui
       - test-libs-usb-drive
       - test-libs-utils
+      - test-crate-ballot-interpreter
+      - test-crate-controllerd
+      - test-crate-daemon-utils
+      - test-crate-patinputd
+      - test-crate-pdi-scanner
+      - test-crate-types-rs
+      - test-crate-vx-logging
       - validate-monorepo
 
 commands:
