--- a/libs/ballot-encoder/tsconfig.build.json
+++ b/libs/ballot-encoder/tsconfig.build.json
@@ -12,7 +12,6 @@
     { "path": "../basics/tsconfig.build.json" },
     { "path": "../eslint-plugin-vx/tsconfig.build.json" },
     { "path": "../fixtures/tsconfig.build.json" },
-    { "path": "../types/tsconfig.build.json" },
-    { "path": "../utils/tsconfig.build.json" }
+    { "path": "../types/tsconfig.build.json" }
   ]
 }
