--- a/libs/fujitsu-thermal-printer/package.json
+++ b/libs/fujitsu-thermal-printer/package.json
@@ -23,27 +23,21 @@
     "@votingworks/image-utils": "workspace:*",
     "@votingworks/message-coder": "workspace:*",
     "@votingworks/types": "workspace:*",
-    "@votingworks/utils": "workspace:*",
     "buffer": "^6.0.3",
     "debug": "4.3.4",
-    "tmp": "^0.2.1",
     "tmp-promise": "^3.0.3",
-    "usb": "^2.6.0",
-    "wait-for-expect": "^3.0.2"
+    "usb": "^2.6.0"
   },
   "devDependencies": {
     "@types/debug": "4.1.8",
     "@types/jest": "^29.5.3",
     "@types/node": "16.18.23",
-    "@types/w3c-web-usb": "^1.0.6",
-    "@votingworks/test-utils": "workspace:*",
     "esbuild": "0.17.11",
     "esbuild-runner": "2.2.2",
     "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
     "jest": "^29.6.2",
     "jest-junit": "^16.0.0",
-    "jest-mock-extended": "^3.0.4",
     "jest-watch-typeahead": "^2.2.2",
     "ts-jest": "29.1.1"
   },
