--- a/libs/fujitsu-thermal-printer/tsconfig.json
+++ b/libs/fujitsu-thermal-printer/tsconfig.json
@@ -20,7 +20,6 @@
     { "path": "../../libs/message-coder/tsconfig.build.json" },
     { "path": "../../libs/image-utils/tsconfig.build.json" },
     { "path": "../../libs/test-utils/tsconfig.build.json" },
-    { "path": "../../libs/types/tsconfig.build.json" },
-    { "path": "../../libs/utils/tsconfig.build.json" }
+    { "path": "../../libs/types/tsconfig.build.json" }
   ]
 }
