--- a/apps/mark-scan/backend/tsconfig.json
+++ b/apps/mark-scan/backend/tsconfig.json
@@ -8,6 +8,7 @@
     "composite": true,
     "esModuleInterop": true,
     "lib": ["dom", "dom.iterable", "esnext"],
+    "jsx": "react-jsx",
     "module": "node16",
     "moduleResolution": "node16",
     "noEmit": true,
