pdi-scanner: Reorganize files into src/rust and src/ts directories
This will make it a bit easier to use our standard TS configuration for
testing, since everything expects TS code in `src`.

--- a/libs/pdi-scanner/Cargo.toml
+++ b/libs/pdi-scanner/Cargo.toml
@@ -3,13 +3,17 @@ name = "pdi-scanner"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "pdi_scanner"
+path = "src/rust/lib.rs"
+
 [[bin]]
 name = "pdictl"
-path = "src/main.rs"
+path = "src/rust/main.rs"
 
 [[bin]]
 name = "pdi-parse-traffic"
-path = "src/parse_traffic.rs"
+path = "src/rust/parse_traffic.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
