pdi-scanner: Add TS client tests

--- a/libs/pdi-scanner/tsconfig.json
+++ b/libs/pdi-scanner/tsconfig.json
@@ -18,6 +18,7 @@
     { "path": "../basics/tsconfig.build.json" },
     { "path": "../eslint-plugin-vx/tsconfig.build.json" },
     { "path": "../image-utils/tsconfig.build.json" },
+    { "path": "../test-utils/tsconfig.build.json" },
     { "path": "../types/tsconfig.build.json" }
   ]
 }
