--- a/libs/pdi-scanner/package.json
+++ b/libs/pdi-scanner/package.json
@@ -47,12 +47,16 @@
   },
   "devDependencies": {
     "@types/debug": "4.1.8",
+    "@types/jest": "^29.5.3",
     "@types/node": "16.18.23",
+    "@votingworks/test-utils": "workspace:*",
     "esbuild-runner": "2.2.2",
     "eslint-plugin-vx": "workspace:*",
-    "is-ci": "^3.0.1",
+    "is-ci-cli": "2.2.0",
     "jest": "^29.6.2",
-    "jest-junit": "^16.0.0"
+    "jest-junit": "^16.0.0",
+    "jest-watch-typeahead": "^2.2.2",
+    "ts-jest": "29.1.1"
   },
   "packageManager": "pnpm@8.1.0"
 }
