pdi-scanner: TS client tests (#4789)
* pdi-scanner: Reorganize files into src/rust and src/ts directories

This will make it a bit easier to use our standard TS configuration for
testing, since everything expects TS code in `src`.

* pdi-scanner: Add TS client tests

* pdi-scanner: Don't sent ok response to exit command

It's unnecessary and confuses the TS client.

--- a/libs/pdi-scanner/tsconfig.json
+++ b/libs/pdi-scanner/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../tsconfig.shared.json",
-  "include": ["ts/src", "ts/test"],
+  "include": ["src/ts", "test"],
   "exclude": [],
   "compilerOptions": {
     "module": "node16",
@@ -18,6 +18,7 @@
     { "path": "../basics/tsconfig.build.json" },
     { "path": "../eslint-plugin-vx/tsconfig.build.json" },
     { "path": "../image-utils/tsconfig.build.json" },
+    { "path": "../test-utils/tsconfig.build.json" },
     { "path": "../types/tsconfig.build.json" }
   ]
 }
