--- a/apps/mark-scan/backend/package.json
+++ b/apps/mark-scan/backend/package.json
@@ -60,6 +60,8 @@
     "js-sha256": "^0.9.0",
     "luxon": "^3.0.0",
     "node-hid": "^2.1.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "rxjs": "7.8.1",
     "tmp": "^0.2.1",
     "uuid": "9.0.1",
@@ -76,6 +78,8 @@
     "@types/luxon": "^3.0.0",
     "@types/node": "16.18.23",
     "@types/node-hid": "^1.3.2",
+    "@types/react": "18.2.18",
+    "@types/react-dom": "^18.2.7",
     "@types/tmp": "0.2.4",
     "@types/uuid": "9.0.5",
     "@votingworks/test-utils": "workspace:*",
