backend - make it printer aware

--- a/apps/mark/backend/package.json
+++ b/apps/mark/backend/package.json
@@ -42,6 +42,7 @@
     "@votingworks/fixtures": "workspace:*",
     "@votingworks/grout": "workspace:*",
     "@votingworks/logging": "workspace:*",
+    "@votingworks/printing": "workspace:*",
     "@votingworks/types": "workspace:*",
     "@votingworks/usb-drive": "workspace:*",
     "@votingworks/utils": "workspace:*",
