--- a/apps/mark/backend/package.json
+++ b/apps/mark/backend/package.json
@@ -41,8 +41,11 @@
     "@votingworks/dev-dock-backend": "workspace:*",
     "@votingworks/fixtures": "workspace:*",
     "@votingworks/grout": "workspace:*",
+    "@votingworks/image-utils": "workspace:*",
     "@votingworks/logging": "workspace:*",
+    "@votingworks/printing": "workspace:*",
     "@votingworks/types": "workspace:*",
+    "@votingworks/ui": "workspace:*",
     "@votingworks/usb-drive": "workspace:*",
     "@votingworks/utils": "workspace:*",
     "debug": "4.3.4",
@@ -50,6 +53,8 @@
     "fs-extra": "11.1.1",
     "js-sha256": "^0.9.0",
     "luxon": "^3.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "tmp": "^0.2.1",
     "zod": "3.23.5"
   },
@@ -59,8 +64,11 @@
     "@types/express": "4.17.14",
     "@types/fs-extra": "11.0.1",
     "@types/jest": "^29.5.3",
+    "@types/jest-image-snapshot": "^6.4.0",
     "@types/luxon": "^3.0.0",
     "@types/node": "16.18.23",
+    "@types/react": "18.2.18",
+    "@types/react-dom": "^18.2.7",
     "@types/tmp": "0.2.4",
     "@votingworks/test-utils": "workspace:*",
     "esbuild": "0.21.2",
@@ -68,6 +76,7 @@
     "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
     "jest": "^29.6.2",
+    "jest-image-snapshot": "^6.4.0",
     "jest-junit": "^16.0.0",
     "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
