--- a/apps/mark/frontend/package.json
+++ b/apps/mark/frontend/package.json
@@ -104,6 +104,7 @@
     "@types/styled-components": "^5.1.26",
     "@types/testing-library__jest-dom": "^5.14.9",
     "@vitejs/plugin-react": "^1.3.2",
+    "@votingworks/backend": "workspace:*",
     "@votingworks/grout-test-utils": "workspace:*",
     "@votingworks/mark-backend": "workspace:*",
     "@votingworks/monorepo-utils": "workspace:*",
