--- a/apps/mark-scan/frontend/package.json
+++ b/apps/mark-scan/frontend/package.json
@@ -93,6 +93,7 @@
     "@types/fetch-mock": "^7.3.2",
     "@types/history": "4.7.11",
     "@types/jest": "^29.5.3",
+    "@types/kiosk-browser": "workspace:*",
     "@types/luxon": "^3.0.0",
     "@types/pluralize": "^0.0.29",
     "@types/react": "18.2.18",
