Move libs/hmpb/render-backend -> libs/hmpb
Most of these changes are rote, though I also updated the README and
accidentally snuck those changes into this commit.

--- a/apps/design/backend/package.json
+++ b/apps/design/backend/package.json
@@ -43,7 +43,7 @@
     "@votingworks/basics": "workspace:*",
     "@votingworks/db": "workspace:*",
     "@votingworks/grout": "workspace:*",
-    "@votingworks/hmpb-render-backend": "workspace:*",
+    "@votingworks/hmpb": "workspace:*",
     "@votingworks/printing": "workspace:*",
     "@votingworks/types": "workspace:*",
     "@votingworks/ui": "workspace:*",
