--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -900,8 +900,8 @@ jobs:
       - store_test_results:
           path: libs/grout/test-utils/reports/
 
-  # @votingworks/hmpb-render-backend
-  test-libs-hmpb-render-backend:
+  # @votingworks/hmpb
+  test-libs-hmpb:
     executor: nodejs
     resource_class: xlarge
     steps:
@@ -909,19 +909,19 @@ jobs:
       - run:
           name: Build
           command: |
-            pnpm --dir libs/hmpb/render-backend build
+            pnpm --dir libs/hmpb build
       - run:
           name: Lint
           command: |
-            pnpm --dir libs/hmpb/render-backend lint
+            pnpm --dir libs/hmpb lint
       - run:
           name: Test
           command: |
-            pnpm --dir libs/hmpb/render-backend test
+            pnpm --dir libs/hmpb test
           environment:
             JEST_JUNIT_OUTPUT_DIR: ./reports/
       - store_test_results:
-          path: libs/hmpb/render-backend/reports/
+          path: libs/hmpb/reports/
 
   # @votingworks/image-utils
   test-libs-image-utils:
@@ -1425,7 +1425,7 @@ workflows:
       - test-libs-fujitsu-thermal-printer
       - test-libs-grout
       - test-libs-grout-test-utils
-      - test-libs-hmpb-render-backend
+      - test-libs-hmpb
       - test-libs-image-utils
       - test-libs-logging
       - test-libs-mark-flow-ui
