--- a/apps/design/backend/tsconfig.json
+++ b/apps/design/backend/tsconfig.json
@@ -26,7 +26,7 @@
     { "path": "../../../libs/fixtures/tsconfig.build.json" },
     { "path": "../../../libs/fs/tsconfig.build.json" },
     { "path": "../../../libs/grout/tsconfig.build.json" },
-    { "path": "../../../libs/hmpb/render-backend/tsconfig.build.json" },
+    { "path": "../../../libs/hmpb/tsconfig.build.json" },
     { "path": "../../../libs/image-utils/tsconfig.build.json" },
     { "path": "../../../libs/printing/tsconfig.build.json" },
     { "path": "../../../libs/test-utils/tsconfig.build.json" },
