--- a/libs/ballot-interpreter/package.json
+++ b/libs/ballot-interpreter/package.json
@@ -65,7 +65,7 @@
     "@types/node-quirc": "workspace:*",
     "@types/tmp": "0.2.4",
     "@votingworks/fs": "workspace:*",
-    "@votingworks/hmpb-render-backend": "workspace:*",
+    "@votingworks/hmpb": "workspace:*",
     "cargo-cp-artifact": "^0.1",
     "esbuild": "0.21.2",
     "esbuild-runner": "2.2.2",
