chore: fix `act`+`react-dom` warnings
We were getting this warning in a bunch of our UI tests:

> Warning: `ReactDOMTestUtils.act` is deprecated in favor of `React.act`. Import `act` from `react` instead of `react-dom/test-utils`. See https://react.dev/warnings/react-dom-test-utils for more info.

This PR updates `@testing-library/react`, which fixes most of these, and our direct uses of `react-dom/test-utils`, which fixes the rest. It also removes some `react-dom` dependencies entirely where they are not needed.

--- a/apps/mark-scan/frontend/package.json
+++ b/apps/mark-scan/frontend/package.json
@@ -86,7 +86,7 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^13.5.0",
     "@types/connect": "^3.4.35",
     "@types/debug": "4.1.8",
@@ -96,8 +96,8 @@
     "@types/kiosk-browser": "workspace:*",
     "@types/luxon": "^3.0.0",
     "@types/pluralize": "^0.0.29",
-    "@types/react": "18.2.18",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/setimmediate": "^1.0.2",
     "@types/styled-components": "^5.1.26",
