--- a/apps/admin/frontend/package.json
+++ b/apps/admin/frontend/package.json
@@ -106,7 +106,7 @@
   "devDependencies": {
     "@jest/types": "^29.6.1",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^13.5.0",
     "@types/base64-js": "^1.3.0",
     "@types/connect": "^3.4.35",
@@ -120,8 +120,8 @@
     "@types/node": "16.18.23",
     "@types/pdfjs-dist": "2.1.3",
     "@types/pluralize": "^0.0.29",
-    "@types/react": "18.2.18",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/readable-stream": "2.3.9",
     "@types/styled-components": "^5.1.26",
