--- a/apps/central-scan/frontend/package.json
+++ b/apps/central-scan/frontend/package.json
@@ -79,7 +79,7 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^13.5.0",
     "@types/connect": "^3.4.35",
     "@types/fast-text-encoding": "^1.0.1",
@@ -90,8 +90,8 @@
     "@types/node": "16.18.23",
     "@types/pify": "^3.0.2",
     "@types/pluralize": "^0.0.29",
-    "@types/react": "18.2.18",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/setimmediate": "^1.0.2",
     "@types/styled-components": "^5.1.26",
