--- a/apps/design/frontend/package.json
+++ b/apps/design/frontend/package.json
@@ -75,14 +75,14 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^13.5.0",
     "@types/debug": "4.1.8",
     "@types/dompurify": "^2.0.3",
     "@types/history": "4.7.11",
     "@types/jest": "^29.5.3",
-    "@types/react": "18.2.18",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "@types/testing-library__jest-dom": "^5.14.9",
