--- a/libs/hmpb/package.json
+++ b/libs/hmpb/package.json
@@ -56,8 +56,8 @@
     "@types/debug": "4.1.8",
     "@types/jest": "^29.5.3",
     "@types/node": "16.18.23",
-    "@types/react": "18.2.18",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
     "@types/styled-components": "^5.1.26",
     "@types/tmp": "0.2.4",
     "@votingworks/fs": "workspace:*",
