--- a/libs/mark-flow-ui/package.json
+++ b/libs/mark-flow-ui/package.json
@@ -66,7 +66,7 @@
     "@storybook/react": "^7.2.2",
     "@tanstack/react-query": "4.32.1",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^13.5.0",
     "@types/base64-js": "^1.3.0",
     "@types/debug": "4.1.8",
@@ -77,8 +77,8 @@
     "@types/lodash.camelcase": "^4.3.6",
     "@types/node": "16.18.23",
     "@types/pluralize": "^0.0.29",
-    "@types/react": "18.2.18",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
     "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
