--- a/libs/printing/package.json
+++ b/libs/printing/package.json
@@ -54,8 +54,8 @@
     "@types/jest": "^29.5.3",
     "@types/jest-image-snapshot": "^6.4.0",
     "@types/node": "16.18.23",
-    "@types/react": "18.2.18",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
     "@types/styled-components": "^5.1.26",
     "@types/tmp": "0.2.4",
     "@votingworks/image-utils": "workspace:*",
