--- a/libs/ui/package.json
+++ b/libs/ui/package.json
@@ -47,7 +47,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/react": "^15.0.7",
     "@votingworks/backend": "workspace:*",
     "@votingworks/ballot-encoder": "workspace:*",
     "@votingworks/basics": "workspace:*",
@@ -95,8 +95,8 @@
     "@types/luxon": "^3.0.0",
     "@types/node": "16.18.23",
     "@types/pluralize": "^0.0.29",
-    "@types/react": "18.2.18",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
     "@types/react-i18next": "^8.1.0",
     "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.3",
